[package]
name = "sarcast-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "^0.4"
once_cell = "*"

# Audio file information
symphonia = { git = "https://github.com/Tommoa/symphonia", branch="add-id3v2-chap-ctoc", default-features = false }

# Serialization
serde = { version = "^1.0", features = [ "derive" ] }
serde_json = "1.0"

# Storage
diesel = { version = "^2.0", features = [ "chrono", "sqlite", "r2d2" ] }
diesel_migrations = { version = "^2.0", features = [ "sqlite" ] }

# Feed parsing
rss = "^2.0"
